<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:textColor="@android:color/black"
            tools:text="Marina Bay Sands" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:textColor="@android:color/black"
            tools:text="Singapore" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/note"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_note"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_normal"
            android:text="@string/add" />

    </LinearLayout>
</ScrollView>